@@ -1,3 +1,9 @@
+2005-03-09  Jim Ingham  <jingham@apple.com>
+
+	* macosx/tkMacOSXInit.c (TkpInit): Check to see if the environment
+	variable XCNOSTDIN is set, and if so, close stdin & stdout.  This
+	is necessary to make remote debugging under Xcode work properly.
+	
 2005-03-08  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tkWinWm.c (WinSetIcon): fix GCLP_ICONSM -> GCLP_HICONSM.
